[package]
name = "corewar-vm"
version = "0.1.0"
edition = "2021"

[lib]
name = "corewar_vm"
path = "src/lib.rs"

[[bin]]
name = "corewar"
path = "src/main.rs"

[features]
default = ["visualizer"]
visualizer = ["ncurse-dep"]

[dependencies]
corewar-common = { path = "../corewar-common" }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
ncurse-dep = { package = "ncurses", version = "5.101", optional = true }
